<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:foregroundGravity="clip_vertical"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="320dp"
        android:layout_height="100dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginStart="@dimen/default_gap"
    android:layout_marginEnd="@dimen/default_gap"
    android:layout_marginTop="@dimen/default_gap" >

    <View
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:background="@color/colorAccent" />
    <TextView
        android:id="@+id/LOGIN"
        android:transitionName="share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:text="@string/log_in"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp" />
</LinearLayout>

    <View
        android:layout_width="308dp"
        android:layout_height="1dip"
        android:layout_marginStart="6dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/loginView"
        android:layout_width="320dp"
        android:layout_height="114dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/USERNAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/USERNAME"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/loginView"
                app:layout_constraintTop_toTopOf="@+id/loginView" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:popupBackground="#00000000"
                app:layout_constraintEnd_toStartOf="@+id/add"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="@+id/loginView"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/username"
                app:layout_constraintTop_toTopOf="@+id/loginView" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/loginView"
                app:layout_constraintTop_toTopOf="@+id/loginView" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PASSWORD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PASSWORD"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/loginView"
                app:layout_constraintTop_toBottomOf="@+id/USERNAME" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                app:layout_constraintEnd_toEndOf="@+id/loginView"
                app:layout_constraintTop_toBottomOf="@+id/username" />


            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/loginView"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOnClick"
        android:text="@string/submit" />

    <Button
        android:id="@+id/deleteLanguagePreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteOnClick"
        android:text="@string/ClearLanguageSetting" />

</LinearLayout>